--- a/4roomforum/Views/Thread/Index.cshtml
+++ b/4roomforum/Views/Thread/Index.cshtml
@@ -26,7 +26,7 @@
             <div class="list-group">
                 @foreach (var thread in threads)
                 {
-                    <a class="list-group-item list-group-item-action bg-light" asp-controller="Thread" asp-action="ThreadDetail" asp-route-id="@thread.ThreadId">
+                    <a class="list-group-item list-group-item-action bg-light" asp-controller="Post" asp-action="Index" asp-route-id="@thread.ThreadId">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">@thread.ThreadTitle</h5>
                             <small>Ngày tạo: @thread.CreatedDate</small>
