--- a/4roomforum/Views/Login/Profile.cshtml
+++ b/4roomforum/Views/Login/Profile.cshtml
@@ -29,17 +29,15 @@
         
     <div class="form-group">
         <label asp-for="JoinDate" class="control-label"></label>
-        <input asp-for="JoinDate" class="form-control" type="date" readonly />
+        <input asp-for="JoinDate" id="JoinDate" class="form-control" type="date" readonly />
     </div>
 
-     <div class="form-group">
-        <label asp-for="LastLogin" class="control-label"></label>
-        <input asp-for="LastLogin" class="form-control" type="date" readonly />
-    </div>
-    <div class="form-group">
-        <label asp-for="Status" class="control-label"></label>
-        <input asp-for="Status" class="form-control" readonly />
-    </div>
+    
+        <input asp-for="LastLogin" class="form-control" type="hidden" readonly />
+
+   
+        <input asp-for="Status" class="form-control" type="hidden" readonly />
+ 
         </div>
     <div class="form-group col-md-6 d-flex justify-content-start text-right">
         <input asp-for="Avatar" class="form-control" hidden />
@@ -74,7 +72,7 @@
     function toggleEditMode() {
         const editButton = document.getElementById('editButton');
         const form = document.getElementById('userForm');
-        const inputs = form.querySelectorAll('input[readonly]:not([id="password"])');
+        const inputs = form.querySelectorAll('input[readonly]:not([id="JoinDate"])');
         const avatarInput = document.getElementById('avatarInput');
 
         if (editButton.textContent === "Update Information") {
