--- a/4roomforum/Views/Login/SignIn.cshtml
+++ b/4roomforum/Views/Login/SignIn.cshtml
@@ -39,8 +39,16 @@
                     </form>
                 </div>
             </div>
+            <div class="row justify-content-center mt-3">
+        <div class="col-md-6">
+            <a asp-action="SignInGoogle"  asp-controller="Login" class="btn btn-danger btn-block">
+                <i class="fab fa-google"></i> Sign in with Google
+            </a>
         </div>
     </div>
+        </div>
+    </div>
+    
 </div>
 <script>
     function togglePassword() {
