--- a/4roomforum/Views/Post/Index.cshtml
+++ b/4roomforum/Views/Post/Index.cshtml
@@ -120,7 +120,10 @@
                             <div class="d-flex justify-content-between align-items-center mt-2">
                                 <span class="badge bg-info text-dark">Lượt like: @post.Like</span>
                                 <div>
-                                    <button class="btn btn-outline-primary btn-sm me-2">Like</button>
+                                    <!--<button class="btn btn-outline-primary btn-sm like-btn"
+                                            data-post-id="@post.Id">
+
+                                    </button>    -->
                                     <button class="btn btn-outline-secondary btn-sm">Bình luận</button>
                                 </div>
                             </div>
