update bỏ Thread và Post, chỉ để Category để Category->Thread->Post

--- a/4roomforum/Views/Category/Index.cshtml
+++ b/4roomforum/Views/Category/Index.cshtml
@@ -46,7 +46,7 @@
                 
                 @foreach (var category in categories)
                 {
-                <a href="#" class="list-group-item list-group-item-action bg-light">
+                <a asp-controller="Thread" asp-action="Index" asp-route-id= "@category.CategoryId" class="list-group-item list-group-item-action bg-light">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1">@category.CategoryName</h5>
                         <small>@category.CreatedDate</small>
