--- a/4roomforum/Views/Home/Index.cshtml
+++ b/4roomforum/Views/Home/Index.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Home";
     var categories = ViewBag.Categories as IEnumerable<_4roomforum.DTOs.CategoryDTO>;
-        int countCategories = 1;
+    
+    int countCategories = 1;
+    var hotThreads = ViewBag.HotThreads as IEnumerable<_4roomforum.DTOs.ThreadDTO>;
+    int countHotThreads = 1;
+    var post = ViewBag.Posts as IEnumerable<_4roomforum.DTOs.PostDTO>;
+    int countPosts = 1;
+    
 }
 
 <div class="container mt-5">
@@ -11,12 +17,6 @@
         <p class="lead text-white">A place to discuss and share your thoughts on various topics.</p>
     </div>
 
-    <!-- Prompt to Log In -->
-    <div class="alert alert-info text-center mt-4">
-        <h4>Hãy đăng nhập để tạo bài viết và tham gia cộng đồng của chúng tôi</h4>
-        <a href="#" class="btn btn-primary">Đăng nhập</a>
-        <a href="#" class="btn btn-secondary">Đăng ký</a>
-    </div>
 
     <div class="row mt-4">
         <!-- Categories Sidebar -->
@@ -29,7 +29,7 @@
                     {
                         break;
                     }
-                    <a href="#" class="list-group-item list-group-item-action bg-light"><li class="list-group-item">@category.CategoryName</li></a>
+                    <a asp-controller="Thread" asp-action="Index" asp-route-id="@category.CategoryId" class="list-group-item list-group-item-action bg-light"><li class="list-group-item">@category.CategoryName</li></a>
                 }
                 
             </ul>
@@ -40,30 +40,42 @@
         <div class="col-md-6">
             <h2 class="text-center text-success">Top Chủ Đề</h2>
             <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action bg-light">
-                    <h5 class="mb-1">Topic 1</h5>
-                    <p class="mb-1">Description of Topic 1</p>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">
-                    <h5 class="mb-1">Topic 2</h5>
-                    <p class="mb-1">Description of Topic 2</p>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">
-                    <h5 class="mb-1">Topic 3</h5>
-                    <p class="mb-1">Description of Topic 3</p>
-                </a>
+                @foreach (var thread in hotThreads)
+                {
+                    if (countHotThreads++ > 5)
+                    {
+                        break;
+                    }
+                    <a asp-controller="Post" asp-action="Index" asp-route-id="@thread.ThreadId" class="list-group-item list-group-item-action bg-light">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">@thread.ThreadTitle</h5>
+                            <small>@thread.CreatedDate</small>
+                        </div>
+                        <p class="mb-1">@thread.ThreadContent</p>
+                    </a>
+                }
             </div>
+            
         </div>
 
         <!-- Top Posts Sidebar -->
         <div class="col-md-3">
-            <h2 class="text-center text-danger">Top Bài Viết</h2>
+            <h2 class="text-center text-danger">Các Bài Viết</h2>
             <ul class="list-group">
-                <a href="#" class="list-group-item list-group-item-action bg-light"><li class="list-group-item">Bài viết 1</li></a>
-                <a href="#" class="list-group-item list-group-item-action bg-light"><li class="list-group-item">Bài viết 2</li></a>
-                <a href="#" class="list-group-item list-group-item-action bg-light"><li class="list-group-item">Bài viết 3</li></a>
-                <a href="#" class="list-group-item list-group-item-action bg-light"><li class="list-group-item">Bài viết 4</li></a>
-            </ul>
+                @foreach (var p in post)
+                {
+                    if (countPosts++ > 5)
+                    {
+                        break;
+                    }
+                    <a asp-controller="Reply" asp-action="Index" asp-route-PostId="@p.Id" class="list-group-item list-group-item-action bg-light">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">@p.PostTitle</h5>
+                            <small>@p.PostDate</small>
+                        </div>
+                        <p class="mb-1">@p.PostContent</p>
+                    </a>
+                }
         </div>
     </div>
 </div>
