--- a/4roomforum/Views/Login/SignUp.cshtml
+++ b/4roomforum/Views/Login/SignUp.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-6" style="width: 40%;">
             <div class="card">
                 <div class="card-header bg-primary text-white">
                     <h4 class="card-title">Đăng ký tài khoản</h4>
@@ -51,6 +51,9 @@
                     <a asp-action="SignIn" asp-controller="Login" class="text-primary">Đã có tài khoản? Đăng nhập ngay!</a>
                 </div>
             </div>
+        </div>
+        <div class="col-md-6 d-flex align-items-center" style="width: 60%;">
+            <img style="width: 100%; height: 100%;" src="/imgs/makima.jpg" class="img-fluid" alt="Sign In Image">
         </div>
     </div>
 </div>
