--- a/4roomforum/Views/Shared/_AdminLayout.cshtml
+++ b/4roomforum/Views/Shared/_AdminLayout.cshtml
@@ -32,7 +32,7 @@
                     <a class="nav-link" asp-area="" asp-controller="AdminThreads" asp-action="Index">Threads</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="AdminPosts" asp-action="Index">Posts</a>
+                    <a class="nav-link" asp-area="" asp-controller="AdminPost" asp-action="Index">Posts</a>
                 </li>
             </ul>
             <div class="d-flex">
