--- a/4roomforum/Views/Post/Index.cshtml
+++ b/4roomforum/Views/Post/Index.cshtml
@@ -90,7 +90,7 @@
                         <div class="card-header @(isCurrentUserPost ? "bg-light" : "") d-flex justify-content-between align-items-center">
                             
                             <div class="title-view-mode">
-                                <h5 class="card-title">Tiêu đề: @post.PostTitle</h5>
+                                <h5 class="card-title"><a href="@Url.Action("Index", "Reply", new { PostId = post.Id })">Tiêu đề: @post.PostTitle</a></h5>
                             </div>
                             <div class="title-edit-mode d-none">
                                 <input type="text" class="form-control" value="@post.PostTitle">
